# KothaQ-AI

./: .gitignore  AGENTS.md  README.md  codex_prompt_playbook_voice_agent.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  local.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260609_0001_initial_tenant_models.py  20260609_0002_demo_seed_support.py  20260611_0003_lead_callback_notes.py  20260612_0004_conversation_summary.py  20260612_0005_knowledge_item_embedding.py
backend/app/: main.py
backend/app/api/: admin_auth.py  dependencies.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  branch.py  call.py  call_turn.py  conversation.py  conversation_summary.py  handoff.py  knowledge_item.py  lead.py  organization.py  phone_number.py  unknown_question.py
backend/app/schemas/: call.py  knowledge.py  lead.py  organization.py  voice.py
backend/app/seeds/: demo.py
backend/app/services/: storage.py  tenancy.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_admin_api.py  test_call_summary.py  test_demo_seed.py  test_knowledge_search.py  test_lead_integration.py  test_migration.py  test_organization_resolution.py  test_request_logging.py  test_storage_models.py  test_unknown_questions.py  test_voice_logging.py  test_voice_webhooks.py
backend/tests/unit/: test_answer_policy.py  test_config.py  (+15 more)
backend/voice_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+69 files in other folders)
