[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent-backend"
version = "0.1.0"
description = "Multilingual SaaS voice agent backend"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "langchain-core>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-groq>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "langgraph>=0.4.0",
  "sentence-transformers>=3.0.0",
  "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]